<resources>
    <string name="app_name">YourFood</string>
    <string name="title_activity_bottom_navigation">bottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_lista">Prodotti</string>
    <string name="title_spesa">Spese</string>
    <string name="title_add">Aggiungi</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifiche</string>
    <string name="saved">Prodotto aggiunto correttamente!</string>


    <string-array name="pasto">
        <item>Colazione</item>
        <item>Merenda</item>
        <item>Pranzo</item>
        <item>Cena</item>
    </string-array>

    <string-array name="categoria">
        <item>Pane/Pasta</item>
        <item>Carne</item>
        <item>Pesce</item>
        <item>Vegano/BIO</item>
    </string-array>

    <string-array name="tipo_prodotto">
        <item>Da consumare</item>
        <item>Consumati</item>
        <item>Scaduti</item>
    </string-array>

    <string-array name="giorni">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="anno">
        <item>2019</item>

    </string-array>



        <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
        <string name="subscribe_to_weather">Subscribe To Weather</string>
        <string name="log_token">Log Token</string>

        <string name="msg_subscribed">Subscribed to weather topic</string>
        <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

        <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
        <!--
            This is the name that users will see when interacting with this channel.
            It should describe the category of notifications that will be sent through this channel
         -->
        <!-- [START fcm_default_icon_string] -->
        <string name="default_notification_channel_name" translatable="true">Weather</string>
        <!-- [END fcm_default_icon_string] -->
        <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
        <string name="fcm_message">FCM Message</string>



</resources>
