<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.yourfood.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.example.yourfood.ui.edit.EditFragment"
        android:label="Edit"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.yourfood.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_lista"
        android:name="com.example.yourfood.ui.lista.ListaFragment"
        android:label="@string/title_lista"
        tools:layout="@layout/fragment_lista" />

    <fragment
        android:id="@+id/navigation_spesa"
        android:name="com.example.yourfood.ui.spesa.SpesaFragment"
        android:label="@string/title_spesa"
        tools:layout="@layout/fragment_spesa" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.yourfood.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

</navigation>